# git2r

./: .Rbuildignore  .gitignore  .travis.yml  CONTRIBUTING.md  DESCRIPTION  Makefile  NAMESPACE  NEWS  NEWS.md  README.Rmd  README.md  appveyor.yml  cleanup  cleanup.win  configure  configure.ac  configure.win
.github/workflows/: R-CMD-check.yaml
R/: S4_classes.R  S4_classes.r  blame.R  blame.r  blob.R  blob.r  branch.R  branch.r  bundle_r_package.R  bundle_r_package.r  bundle_repo.r  checkout.R  checkout.r  commit.R  commit.r  config.R  config.r  contributions.R  contributions.r  credential.R  credential.r  data_repository.R  diff.R  diff.r  fetch.R  fetch.r  git2r.R  git2r.r  git_connection.r  git_recent.r  git_sha.r  index.R  index.r  is_git.R  libgit2.R  libgit2.r  list_files_git.r  markdown_link.r  merge.R  merge.r  (+47 more)
inst/: AUTHORS  CITATION  COPYING  COPYRIGHTS
inst/code/: Makefile  README  git_log_file.R  log.c
inst/tests/: test_git2r.r
man/: add-methods.Rd  add.Rd  add_session_info.Rd  ahead_behind-methods.Rd  ahead_behind.Rd  as.data.frame.git_repository.Rd  as.data.frame.git_tree.Rd  as.list.git_tree.Rd  blame-methods.Rd  blame.Rd  blob_create-methods.Rd  blob_create.Rd  branch-class.Rd  branch_create-methods.Rd  branch_create.Rd  branch_delete-methods.Rd  branch_delete.Rd  branch_get_upstream-methods.Rd  branch_get_upstream.Rd  branch_remote_name-methods.Rd  branch_remote_name.Rd  branch_remote_url-methods.Rd  branch_remote_url.Rd  branch_rename-methods.Rd  branch_rename.Rd  branch_set_upstream-methods.Rd  branch_set_upstream.Rd  branch_target-methods.Rd  branch_target.Rd  branch_upstream-methods.Rd  branches-methods.Rd  branches.Rd  bundle_r_package-methods.Rd  bundle_r_package.Rd  bundle_repo-methods.Rd  checkout-methods.Rd  checkout.Rd  checkout_reflog_msg.Rd  clone-methods.Rd  clone.Rd  (+269 more)
man-roxygen/: merge-example.R  remote-example.R  repo-param.R  return-git_merge_result.R  thierry.r
misc/: build_Makevars.r  cache-pass-R-CMD-check-git2r.patch  diff_print-pass-R-CMD-check-git2r.patch  regcomp-pass-R-CMD-check-git2r.patch  util-pass-R-CMD-check-git2r.patch  winhttp-build-with-mingw-w64.patch
patches/: annotated_commit.c.patch  apply.c.patch  attrcache.c.patch  cache-pass-R-CMD-check-git2r.patch  cache.c.patch  cc-compat.h.patch  checkout-pass-R-CMD-check-git2r.patch  checkout.c.patch  checkout.patch  common-remove-includes.patch  common.h.patch  config.c.patch  diff.c.patch  diff.h.patch  diff_print-pass-R-CMD-check-git2r.patch  diff_print.c.patch  diff_stats.c.patch  fetchhead.c.patch  global.c.patch  index.c.patch  iterator.c.patch  merge.c.patch  odb.c.patch  patch_parse.c.patch  posix-pass-R-CMD-check-git2r.patch  posix.h.patch  rebase-pass-R-CMD-check-git2r.patch  rebase.c.patch  reflog.c.patch  regcomp-pass-R-CMD-check-git2r.patch  regex-prefix-entry-points.patch  reparse.h.patch  repository.c.patch  revparse.c.patch  smart_pkt.c.patch  smart_protocol.c.patch  stash.c.patch  transaction-pass-R-CMD-check-git2r.patch  transaction.patch  tree-cache.c.patch  (+5 more)
scripts/: build_DESCRIPTION.r  build_Makevars.R  build_Makevars.r  build_git2r_c.r  libgit2_sha.R  libgit2_sha.r
src/: Makevars  Makevars.in  Makevars.ucrt  Makevars.win  Makevars_libgit2.in  error.c  error.h  git2r-win.def  git2r.c  git2r_S3.c  git2r_S3.h  git2r_arg.c  git2r_arg.h  git2r_blame.c  git2r_blame.h  git2r_blob.c  git2r_blob.h  git2r_branch.c  git2r_branch.h  git2r_checkout.c  git2r_checkout.h  git2r_clone.c  git2r_clone.h  git2r_commit.c  git2r_commit.h  git2r_config.c  git2r_config.h  git2r_constants.h  git2r_cred.c  git2r_cred.h  git2r_deprecated.h  git2r_diff.c  git2r_diff.h  git2r_error.c  git2r_error.h  git2r_graph.c  git2r_graph.h  git2r_index.c  git2r_index.h  git2r_libgit2.c  (+45 more)
src/libgit2/: annotated_commit.c  cache.c  checkout.c  common.h  describe.c  diff_print.c  indexer.c  pack-objects.c  pack.c  rebase.c  revwalk.c  transaction.c  util.c
src/libgit2/include/git2/: common.h  diff.h
src/libgit2/src/: apply.c  attrcache.c  cache.c  cc-compat.h  checkout.c  common.h  config.c  diff.c  diff_print.c  diff_stats.c  fetchhead.c  global.c  hash.h  index.c  iterator.c  merge.c  odb.c  patch_parse.c  rebase.c  reflog.c  refs.c  repository.c  revparse.c  stash.c  tree-cache.c  tsort.c  util.c
src/libgit2/src/hash/sha1dc/: sha1.c
src/libgit2/src/transports/: smart_pkt.c  smart_protocol.c
src/libgit2/src/unix/: posix.h
src/libgit2/src/win32/: posix.h  reparse.h
src/libgit2/transports/: winhttp.c
src/libgit2/win32/: posix.h
src/regex/: regcomp.c  regex.h
src/zlib/: deflate.c  inftrees.c  zconf.h  zlib.h  zutil.c
tests/: add-force.R  bare_repository.R  blame.R  blob.R  branch.R  bundle.R  checkout-named-branch.R  checkout.R  checkout_branch.R  checkout_commit.R  checkout_tag.R  clone_bare.R  clone_branch.R  clone_checkout.R  collaboration.R  commit.R  commits_path.R  config.R  data_repository.R  diff.R  fast_forward_merge.R  fetch.R  graph.R  index.R  invalid-conf-var.R  libgit2.R  ls_tree.R  merge.R  merge_named_branch.R  merge_unstaged_conflict.R  normal_merge.R  note.R  odb_blobs.R  pre-process-path.R  pull.R  push-force.R  push.R  reference.R  reflog.R  refspec.R  (+17 more)
tests/testthat/: test_a_git_connection.R  test_b_write_delim_git.R  test_c_git_recent.R  test_c_git_sha.R  test_c_list_files_git.R  test_c_read_delim_git.R  test_d_remove_files_git.R  test_read_delim_git.R
tests/util/: check.R
tools/: README.md  buf_dispose.c  build_Makevars.r  missing  version.c  winlibs.R
vignettes/: data-repository.Rmd  git2r.Rmd
